# navrobot

./: .gitignore  README.md  navrobot.code-workspace  pyproject.toml  requirements.txt
ci_cd/: __init__.py  deploy.yml  tests.yml
configs/: env.yaml  model.yaml  serving.yaml  training.yaml
data/: README.md
experiments/: __init__.py
monitoring/: README.md  __init__.py  alerts.py  drift.py  metrics.py
navigation/: README.md  env_wrapper.py  policy.py  reward.py  train_rl.py
perception/: README.md  evaluate.py  export.py  train.py
perception/datasets/: vision_dataset.py
perception/models/: __init__.py
pipelines/: __init__.py  data_pipeline.py  pipeline.yaml  retrain_pipeline.py  training_pipeline.py
scripts/: reproduce_experiment.sh  run_simulation.py  setup_project.py  start_server.sh
scripts/serving/: app.py
serving/: Dockerfile  __init__.py  app.py  schemas.py  utils.py
simulation/: README.md  generate_data.py
simulation/envs/: gridworld.py
simulation/robot/: __init__.py  controller.py  kinematics.py
simulation/sensors/: __init__.py  camera.py  lidar.py
tests/: test_perception.py  test_pipelines.py  test_serving.py  test_simulation.py
